# HoshinekoFM

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PKGBUILD  README-zh.md  README.md  bugs.md  contributing.md  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.serena/: project.yml
electron/: fsUtils.ts  fsWatcher.ts  jobs.ts  main.ts  mimeMap.ts  preload.ts  pty.ts  shared.ts  tsconfig.json
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: channel.rs  cli.rs  error.rs  lib.rs  lock.rs  macros.rs  main.rs  mem_monitor.rs
src-tauri/src/app/: commands.rs  fs_service.rs  mesh_server.rs  mod.rs  state.rs  tabs.rs  ui_service.rs
src-tauri/src/app/ui_service/: breadcrumbs.rs  clipboard.rs  mod.rs  nav.rs  progress.rs
src-tauri/src/appreuse/: mod.rs
src-tauri/src/drag/: commands.rs  linux.rs  mod.rs
src-tauri/src/fsworker/: callback.rs  mod.rs  platform.rs  pool.rs  protocol.rs  relay.rs  worker.rs
src-tauri/src/fsworker/worker/: builder.rs  config.rs  files.rs  inotify.rs  mod.rs  ops.rs  pipeline.rs  registry.rs  router.rs  run.rs  scheduler.rs  service.rs  tests.rs  watch.rs
src-tauri/src/instance_bus/: connection.rs  mod.rs  server.rs  watcher.rs
src-tauri/src/ipc/: mod.rs  protocol.rs
src-tauri/src/ipc/protocol/: file.rs  mesh.rs  mod.rs  ui.rs
src-tauri/src/mesh/: callback.rs  discovery.rs  endpoint_dispatch.rs  envelope.rs  id.rs  mod.rs  proxy.rs  server.rs  transport.rs
src-tauri/src/mesh/types/: fsservice.rs  instance.rs  mod.rs  ui.rs  window.rs
src-tauri/src/window_bus/: bus_master.rs  commands.rs  mod.rs
(+96 files in other folders)
