[package]
name = "hnfm"
version = "0.1.0"
description = "Hoshineko File Manager"
authors = ["sbchild <sbchild0@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hnfm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2"
base64 = "0.22"
tarpc = { version = "0.37", features = ["serde-transport"] }
tokio-util = { version = "0.7", features = ["codec"] }
nix = { version = "0.31", features = ["fs", "process", "signal", "user"] }
notify = { version = "7", features = ["macos_kqueue"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
futures = "0.3.32"
libc = { version = "0.2.186", features = ["extra_traits"] }
crossfire = { version = "3.1.19", features = ["tokio"] }
snafu = { version = "0.9.1", features = ["futures"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk-pixbuf = "0.22"
